--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "obsidian-remove-multiple-empty-lines-plugin",
-    "version": "1.1.0",
-    "description": "An Obsidian plugin to replace multiple empty lines with a single empty line, with preview and undo functionality.",
+    "name": "newline-adjuster",
+    "version": "1.1.1",
+    "description": "Fine-grained replacement of newlines, with preview and undo functionality.",
     "main": "main.js",
     "scripts": {
         "dev": "node esbuild.config.mjs",
