--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
     "id": "newline-adjuster",
     "name": "Newline Adjuster",
-    "version": "1.1.1",
+    "version": "1.1.2",
     "minAppVersion": "0.12.0",
     "description": "Fine-grained replacement of newlines, with preview and undo functionality.",
     "author": "Will Lewis",
@@ -10,8 +10,8 @@
     "js": "main.js",
     "manifestVersion": 1,
     "commands": [
-        {
-            "id": "newline-adjuster",
+		{
+            "id": "adjust-newlines",
             "name": "Adjust Newlines",
             "icon": "dice",
             "checkCallback": true
@@ -19,13 +19,14 @@
         {
             "id": "preview-changes",
             "name": "Preview Changes",
+            "icon": "eye",
             "checkCallback": true
         },
         {
             "id": "undo-last-change",
             "name": "Undo Last Change",
+            "icon": "undo",
             "checkCallback": true
         }
     ]
 }
-
